0.9.5 (2016-03-16):
* Added remove from library option (no full clean up necessary)
* No longer display dialogs for preserve, rating and tagging
* Fixed infinite hanging when confirmation dialog delay set to 0 (default) or empty
* Started splitting and cleaning up code
* Other minor fixes

0.9.4 (2016-03-09):
* Directory removal fix alternate file method
* Added error handlers for alternate file method operations

0.9.3 (2016-03-08):
* Delete or move all files matching video filename minus the extension.

0.9.2 (2016-03-03):
* Fix for alternative file method on TV episodes when using SMB/NFS shares.

0.9.1 (2016-02-16):
* Removed non working functions (IMDb etc)
* Rewrote functions to fix actions on SMB and NFS shares (use alternative file method)
* Clean up library after moving/deleting optional
* Optional confirm dialog delay, fixes interaction with other add-ons (Trakt rating dialog in my case)
* Code is tested with Kodi 17 (Krypton), but should be compatible with at least Kodi 14 (Helix)
* Many thanks to Pedro Pinto (r.pynto@gmail.com) for creating the original add-on

0.9.0 (23-01-2014):
* New feature: Open IMDb in browser
* Bugfixes

0.8.5 (17-01-2014):
* Bugfixes

0.8.4 (22-12-2013):
* Minor changes

0.8.3 (15-12-2013):
* Bugfix: error starting

0.8.2 (15-12-2013):
* Bugfix: progress dialog not showing in frodo
* Bugfix: error in preserve playcount/set tag if not in lib
* Bugfix: recommended not working due to change in imdb site
* Other small improvements

0.8.1 (12-12-2013):
* Bugfix: error when updating if progress dialog disabled

0.8.0 (10-12-2013):
* New feature: single folder structure for episodes
* New feature: warning when deleting/moving many files
* Bugfix: episodes broken
* Bugfix: single folder files matching

0.7.0 (03-12-2013):
* New feature: preserve watched status (playcount)
* New feature: set custom tag (gotham)
* Improvement: separated post modules for movies/episodes
* Bugfix: playcount when moving

0.6.1 (29-11-2013):