@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 if __name__ == "__main__":
     import xbmcaddon
     xbmcaddon.Addon().openSettings()
